Fixed flickers on Safari 6, added element.shortcuts from mootools more

--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,14 @@ body {
 	clear: both;
 }
 
+* {
+	-webkit-backface-visibility: hidden;
+	   -moz-backface-visibility: hidden;
+	    -ms-backface-visibility: hidden;
+	     -o-backface-visibility: hidden;
+	     -o-backface-visibility: hidden;
+}
+
 /* Error Message
 -----------------------------------------------------------------------------*/
 
